# TESSERA

./: .dockerignore  .gitignore  BENCHMARK.md  CHANGELOG.md  Dockerfile  FINAL_BENCHMARK_REPORT.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  TESSERA_Validation_Report.md  benchmark_charts.py  benchmark_report.md  detect.txt  findings.json  pyproject.toml  samples.txt  test_e2e.yaml  test_edge_empty.yaml  test_edge_missing_ref.yaml  test_edge_orphan.yaml  test_topology_invalid.yaml  test_topology_memory.yaml  test_topology_valid.yaml  vulnerability_report.md
.github/workflows/: ci.yml  dependency-review.yml  release.yml  tessera.yml
.mesh/db/: mesh.db
.pre-commit-hooks/: README.md  tessera.yaml
data/: metadata.json
deploy/: docker-compose.yml
deploy/helm/tessera/: Chart.yaml
deploy/k8s/: deployment.yaml
docker/: Dockerfile  docker-compose.yml
docs/: DEPLOYMENT.md  ENVIRONMENT.md  GETTING_STARTED.md  INCIDENT_RUNBOOK.md  PRODUCT_REQUIREMENTS.md  RELEASE_PLAYBOOK.md  RESEARCH_DRIVEN_CHANGES.md  ROADMAP.md  ROADMAP_PHASES.md  SPEC.md  SUPPORT_MATRIX.md  V1.0_PLAN.md  openapi.json
examples/: complex_agent.yaml  customer_support_agent.yaml  memory_poisoning.yaml  rag_to_tool.yaml  safe_agent.yaml  sample_queries.txt
scripts/: check_host_deploy.sh  github-actions.yml
src/tessera/: __init__.py  cli.py
src/tessera/api/: __init__.py
src/tessera/classifier/: rule_based.py
src/tessera/engine/: scanner.py
src/tessera/enterprise/: auth.py
src/tessera/findings/: models.py
src/tessera/fingerprint/: engine.py
src/tessera/gate/: __init__.py
src/tessera/infra/: logging_utils.py
src/tessera/marketplace/: plugins.py  registry.py
src/tessera/probes/: builtin.py
src/tessera/rdt/: README.md  __init__.py  config.py  data_pipeline.py  dataset_generator.py  encoder.py  gnn_baseline.py  gnn_scanner.py  model.py  moe.py  recurrent_block.py  scanner.py
src/tessera/siem/: connectors.py
src/tessera_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/tessera_security.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tessera-lab/: README.md
tessera-lab/attack-scenarios/: scenario_01_rag_tool.md  scenario_02_memory_poison.md  scenario_03_multihop.md
tessera-lab/reports/: COMPARISON.md
tessera-lab/scripts/: run_scans.sh
tessera-lab/topology-maps/: attack_memory_poison.yaml  attack_multihop.yaml  attack_rag_tool.yaml  base.yaml  safe_baseline.yaml
tests/: conftest.py  test_api.py  test_classifier.py  test_cli.py  test_gnn.py  test_gnn_specific.py  test_html_formatter.py  test_integration.py  test_loader.py  test_outputs.py  test_public_surface.py  test_repository.py  test_scan_command.py  test_scanner.py  test_topology.py
(+61 files in other folders)
