[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tessera-security"
version = "1.0.2"
description = "Temporal, Emergent, Swarm-based Security & Evaluation for Resilience of AI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "TESSERA Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.5.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
]
llm = [
    "openai>=1.12.0",
    "anthropic>=0.18.0",
]
ml = [
    "torch>=2.2.0",
    "sentence-transformers>=2.4.0",
]

[project.scripts]
tessera = "tessera.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"